# FASTAPI

./: .dockerignore  README.md  crud.py  database.py  database_schema.sql  main.py  models.py  pyproject.toml  railway.json  render.yaml  requirements.txt  setup.py  test_api.py
