[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sistema-citas-medicas"
version = "1.0.0"
description = "Sistema de Citas Médicas API"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "gunicorn==21.2.0",
    "PyMySQL==1.1.0",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
]
